@@ -1,5 +1,14 @@
 [[= ttabs('v', $d{vn}) ]]
+
 <h2>[[: $d{vn}{title} ]]</h2>
+
+-[[ if($p{AuthLoggedin}) { ]]
+<p class="mod">&lt; user options - 
+  <a href="/u[[= $p{AuthId} ]]/votes" rel="voteDD" class="dropdown">[[= $d{vote}{vid} ? 'your vote: '.$d{vote}{vote} : 'vote' ]]</a>
+- <a href="/u[[= $p{AuthId} ]]/list" rel="listDD" class="dropdown">[[= !$d{list}{vid} ? 'add to vn list' : 'status: '.lc $VNDB::LSTAT->[$d{list}{status}] ]]</a>
+&gt;</p>
+[[ } ]]-
+
 
 [[ if($d{vn}{hidden}) { ]]-
  <span class="warning">
@@ -55,14 +64,6 @@
 [[ } ]]-
 </div>
 
-
--[[ if($p{AuthLoggedin}) { ]]
-<p class="mod">&lt; user options - 
-  <a href="/u[[= $p{AuthId} ]]/votes" rel="voteDD" class="dropdown">[[= $d{vote}{vid} ? 'your vote: '.$d{vote}{vote} : 'vote' ]]</a>
-- <a href="/u[[= $p{AuthId} ]]/list" rel="listDD" class="dropdown">[[= !$d{list}{vid} ? 'add to vn list' : 'status: '.lc $VNDB::LSTAT->[$d{list}{status}] ]]</a>
-&gt;</p>
-[[ } ]]-
-
 -[[ 
   $d{vn}{c_votes} =~ s#^([0-9]{2}.[0-9]{2})\|([0-9]{4})$#$2 == 0 ? 'No votes yet' : 
     $1 == 0 ? sprintf 'N/A (%d vote%s)', $2, $2>1?'s':'' : sprintf '%.2f (%d vote%s)', $1, $2, $2>1?'s':''#e;
@@ -100,10 +101,10 @@ if($d{vn}{length} || $d{vn}{alias} || @links || $prod) { ]]
  </dl>
 [[ } ]]-
 
- [[ if(@{$d{vn}{categories}}) { my %nolvl = (map {$_=>1} qw| pli pbr gaa gab hfa hfe |); ]]-
+ [[ if(@{$d{vn}{categories}}) { my %nolvl = (map {$_=>1} qw| pli pbr gaa gab hfa hfe lea lfa lsp tfu tpa tpr |); ]]-
  <h3>Categories</h3>
- <dl>
-  [[ for (sort keys %$VNDB::CAT) {
+ <dl class="vnrel">
+  [[ for (qw|e s g p h|) {
     my $c = $_;
     my @c = map { my $s=$_;
       my ($cs) = grep { $_->[0] eq $c.$s } @{$d{vn}{categories}};
@@ -113,6 +114,9 @@ if($d{vn}{length} || $d{vn}{alias} || @links || $prod) { ]]
     if(@c) { ]]-
    <dt>[[: $VNDB::CAT->{$c}[0] ]]</dt><dd>[[= join(', ', @c) ]]</dd>
   [[ } } ]]
+  [[ if(grep $_->[0] =~ /^[tl]/, @{$d{vn}{categories}}) { ]]-
+   <dt>Place/Time</dt><dd>[[= join ', ', map $VNDB::CAT->{substr($_->[0],0,1)}[1]{substr($_->[0],1,2)}, sort grep $_->[0] =~ /^[tl]/, @{$d{vn}{categories}} ]]</dd>
+  [[ } ]]-
  </dl>
  [[ } ]]-
 
